# Under-The-Hood-Cpp

./: README.md
Memory allocator/: main.c  memory_allocator.c  memory_allocator.h
OOP/OOP C/: CMakeLists.txt  README.md
OOP/OOP C++/: CMakeLists.txt  a.out
OOP/OOP C++/encasulation/: cpp2c_encapsulation.cpp  cpp2c_encapsulation_defs.cpp
OOP/OOP C++/inheritance/: cpp2c_inheritance.cpp  cpp2c_inheritance_defs.h
OOP/OOP C++/plymorphism/: cpp2c_polymorphism.cpp
OOP/OOP C/encapsulation/: c_encapsulation.c  c_encapsulation_def.c  c_encapsulation_defs.h
OOP/OOP C/inheritance/: c_inheritance.c  c_inheritance_defs.c  c_inheritance_defs.h
OOP/OOP C/polymorphism/: c_polymorphism.c  c_polymorphism_defs.c  c_polymorphism_defs.h
Overiding new & delete/: Person.cpp  Person.h  main.cpp  test.cpp
Producer-Consumer/: consumer.c  consumer.h  global_vars.h  main.c  producer.c  producer.h
Scheduler/: main.cpp  scheduler.cpp  scheduler.h  task.cpp  task.h  time.cpp  time.h
Smart Pointers/: main.cpp
Smart Pointers/Safe Ptr/: safe_ptr.h  safe_ptr.hpp  test_safe_ptr.cpp
Smart Pointers/Shared Ptr/: a.out  shared_ptr.h  shared_ptr.hpp  test_shared_ptr.cpp  test_shared_ptr.h
Smart Pointers/Unique Ptr/: test_unique_ptr.cpp  unique_ptr.h  unique_ptr.hpp
